--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@line/liff": "^2.27.3",
     "@tailwindcss/vite": "^4.1.18",
     "framer-motion": "^12.23.26",
     "react": "^19.2.0",
